[package]
name = "etanol"
version = "0.0.1"
edition = "2021"
authors = ["Matheus Castro <matheuszastrodev@hotmail.com>"]
license = "MIT"
description = "A orm for rust"
homepage = "https://github.com/theuszastro/etanol-rs"
repository = "https://github.com/theuszastro/etanol-rs"
keywords = ["cli", "compiler", "orm"]
exclude = [ "etanol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "etanol"
path = "src/lib.rs"

[dependencies]
