[package]
name = "etanol"
version = "0.1.2"
edition = "2021"
authors = ["Matheus Castro <matheuszastrodev@hotmail.com>"]
license = "MIT"
readme = "../readme.md"
description = "A orm for rust"
homepage = "https://github.com/theuszastro/etanol-rs"
repository = "https://github.com/theuszastro/etanol-rs"
keywords = ["cli", "compiler", "orm"]
exclude = [ "etanol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "etanol"
path = "src/lib.rs"

[dependencies]
uuid = { version = "1.1.1", features = ["v4"] }

etanol_utils = { path = "../etanol_utils", version = "0.1.0" }
etanol_macros = { path = "../etanol_macros", version = "0.1.0" }
etanol_compiler = { path = "../etanol_compiler", version = "0.1.0" }
etanol_databases = { path = "../etanol_databases", version = "0.1.0" }