[package]
name = "etanol_cli"
version = "0.0.3"
edition = "2021"
authors = ["Matheus Castro <matheuszastrodev@hotmail.com>"]
license = "MIT"
description = "A command line interface for etanol-rs"
homepage = "https://github.com/theuszastro/etanol-rs"
repository = "https://github.com/theuszastro/etanol-rs"
keywords = ["cli", "orm"]
categories = ["command-line-utilities"]
exclude = [ "etanol"]

[install]
root = "~/.etanol"

[[bin]]
name = "etanol"
path = "./src/main.rs"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.19"
uuid = { version = "1.0.0", features = ["v4"] }
lazy_static = "1.4.0"

etanol_databases = { version = "0.0.2", path="../etanol_databases" }
etanol_utils = { version = "0.0.2", path="../etanol_utils" }