[package]
name = "etanol_databases"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Castro <matheuszastrodev@hotmail.com>"]
license = "MIT"
description = "A compiler for etanol-rs"
homepage = "https://github.com/theuszastro/etanol-rs"
repository = "https://github.com/theuszastro/etanol-rs"
keywords = ["orm"]
exclude = [ "etanol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "etanol_databases"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.27.0", features = ["bundled"] }
regex = "1.5.5"
lazy_static = "1.4.0"

etanol_macros = { path = "../etanol_macros", version = "0.1.0" }
etanol_utils = { path="../etanol_utils", version = "0.1.0" }