[package]
name = "etanol_macros"
version = "0.1.2"
edition = "2021"
authors = ["Matheus Castro <matheuszastrodev@hotmail.com>"]
license = "MIT"
readme = "../crates.md"
description = "A macros for etanol-rs"
homepage = "https://github.com/theuszastro/etanol-rs"
repository = "https://github.com/theuszastro/etanol-rs"
keywords = ["orm"]
exclude = [ "etanol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "etanol_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
etanol_utils = { path = "../etanol_utils", version = "0.1.0" }
lazy_static = "1.4.0"