[package]
name = "etanol_utils"
version = "0.0.1"
edition = "2021"
authors = ["Matheus Castro <matheuszastrodev@hotmail.com>"]
license = "MIT"
description = "A compiler for etanol-rs"
homepage = "https://github.com/theuszastro/etanol-rs"
repository = "https://github.com/theuszastro/etanol-rs"
keywords = ["orm"]
exclude = [ "etanol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "etanol_utils"
path = "src/lib.rs"

[dependencies]
ansi_term = "0.12.1"