[package]
name = "etanol_utils"
version = "0.1.1"
edition = "2021"
authors = ["Matheus Castro <matheuszastrodev@hotmail.com>"]
license = "MIT"
description = "A compiler for etanol-rs"
homepage = "https://github.com/theuszastro/etanol-rs"
repository = "https://github.com/theuszastro/etanol-rs"
keywords = ["orm"]
exclude = [ "etanol"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "etanol_utils"
path = "src/lib.rs"

[dependencies]
ansi_term = "0.12.1"
lazy_static = "1.4.0"
dotenv = "0.15.0"
data-encoding = "2.3.2"

etanol_compiler = {path = "../etanol_compiler", version = "0.1.0" }